# rest-client

./: MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/: basic_usage.py
gemini/: best-practices.md  client.py  exceptions.py
rest_client/: __init__.py  async_client.py  auth.py  client.py  config.py  exceptions.py  retry.py
specs/: requirements.md
tests/: __init__.py  test_async_client.py  test_auth.py  test_client.py  test_exceptions.py  test_retry.py
